@@ -49,6 +49,8 @@ int main()
   dolfin_set("tolerance", 0.1);
   dolfin_set("method", "dg");
   dolfin_set("order", 0);
+  dolfin_set("initial time step", 0.1);
+  dolfin_set("fixed time step", true);
 
   NonNormal nonnormal;
   nonnormal.solve();
